--- a/games/5/index.html
+++ b/games/5/index.html
@@ -100,7 +100,11 @@
 
     <main id="main" class="game-main">
       <h1>CSS Colors</h1>
-      <p id="instructions">This puzzle has nine 9-letter named colors. Do you know their names? The color swatches at the beginning of each one are your main hint, but if you need help, check out for more help after the puzzle!</p>
+      <p id="instructions">
+        This puzzle has nine 9-letter named colors. Do you know their names? The color swatches at the beginning of 
+        each one are your main hint, but if you need help, check out for more help after the puzzle! Or
+        <a href="./solution.html">visit the solution page</a>.
+      </p>
 
       <article aria-describedby="instructions" role="application">
         <ul>
