new comic: somewhere someone

--- a/comics/233/index.html
+++ b/comics/233/index.html
@@ -9,23 +9,23 @@
     <meta name="description" content="comiCSS: A webcomic about CSS. Coded in CSS." />
     <meta name="theme-color" content="#993399" />
 
-    <title>comiCSS #232: The Wizard of UX</title>
+    <title>comiCSS #233: Somewhere, Someone</title>
 
-    <meta property="og:title" content="comiCSS #232: The Wizard of UX" />
+    <meta property="og:title" content="comiCSS #233: Somewhere, Someone" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://comicss.art/comics/232" />
-    <meta property="og:image" content="https://comicss.art/comics/232/thumb.png" />
-    <meta property="og:description" content="Minimalistic cartoon with the main character from the Wonderful Wizard of Oz stating what they want from the wizard: a lion wants courage, a scarecrow wants a brain, a tin woodman wants a brain, and the girl Dorothy wants 'web developers who care about accessibility'" />
+    <meta property="og:url" content="https://comicss.art/comics/233" />
+    <meta property="og:image" content="https://comicss.art/comics/233/thumb.png" />
+    <meta property="og:description" content="comic strip with 4 panels in a 2x2 grid showing a character that says 'somewhere right now... someone online... is creating an amazing demo. [looking to the reader] ...And I can't wait to see it!'" />
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:url" content="https://comicss.art/comics/232">
-    <meta name="twitter:title" content="comiCSS #232: The Wizard of UX">
-    <meta name="twitter:description" content="Minimalistic cartoon with the main character from the Wonderful Wizard of Oz stating what they want from the wizard: a lion wants courage, a scarecrow wants a brain, a tin woodman wants a brain, and the girl Dorothy wants 'web developers who care about accessibility'">
-    <meta name="twitter:image" content="https://comicss.art/comics/232/thumb.png">
+    <meta name="twitter:url" content="https://comicss.art/comics/233">
+    <meta name="twitter:title" content="comiCSS #233: Somewhere, Someone">
+    <meta name="twitter:description" content="comic strip with 4 panels in a 2x2 grid showing a character that says 'somewhere right now... someone online... is creating an amazing demo. [looking to the reader] ...And I can't wait to see it!'">
+    <meta name="twitter:image" content="https://comicss.art/comics/233/thumb.png">
     <link rel="monetization" href="https://fynbos.me/alvaro">
 
     <link rel="shortcut icon" href="/favicon.png" />
 
-    <link rel="canonical" href="https://comicss.art/comics/232" />
+    <link rel="canonical" href="https://comicss.art/comics/233" />
 
     <link rel="stylesheet" href="/css/almond.lite.min.css" />
     <link rel="stylesheet" href="/css/styles.css" />
@@ -96,13 +96,13 @@
         </ul>
       </nav>
     </header>
-    <main id="main">
+    <main id="main" class="latest">
       <noscript>
         This website needs JavaScript to navigate. But, you can see all the drawings linked at once 
         (without needing any JavaScript) in the <a href="/archive">Archive</a>.
       </noscript>
 
-      <h1>The Wizard of UX</h1>
+      <h1>Somewhere, Someone</h1>
 
       <nav aria-label="Comic strip browsing">
         <a href="/comics/1" rel="first">
@@ -111,13 +111,13 @@
           </svg>
           <span>First</span>
         </a>
-        <a href="/comics/231" rel="prev">
+        <a href="/comics/232" rel="prev">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M75,0 25,50 75,100" />
           </svg>
           <span>Previous</span>
         </a>
-        <a class="random-post" href="/comics/163">
+        <a class="random-post" href="/comics/39">
           <svg width="1em" height="1em" viewBox="0 0 100 100" class="random" aria-hidden="true">
             <path class="random" d="M100,25 80,2 80,48Z" />
             <path class="random" d="M100,75 80,98 80,52Z" />
@@ -125,7 +125,7 @@
           </svg>
           <span>Random</span>
         </a>
-        <a href="/comics/233" rel="next">
+        <a href="/comics/234" rel="next">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M25,0 75,50 25,100" />
           </svg>
@@ -139,8 +139,11 @@
         </a>
       </nav>
 
-      <div id="comic-strip" role="img" class="vertical" aria-label="Minimalistic cartoon with the main character from the Wonderful Wizard of Oz stating what they want from the wizard: a lion wants courage, a scarecrow wants a brain, a tin woodman wants a brain, and the girl Dorothy wants 'web developers who care about accessibility'">
-        <img src="/comics/232/232-wizard-of-ux-0.webp" alt="" width="350" />
+      <div id="comic-strip" role="img" class="" aria-label="comic strip with 4 panels in a 2x2 grid showing a character that says 'somewhere right now... someone online... is creating an amazing demo. [looking to the reader] ...And I can't wait to see it!'">
+        <img src="/comics/233/233-somewhere-someone-0.webp" alt="" width="350" />
+        <img src="/comics/233/233-somewhere-someone-1.webp" alt="" width="350" />
+        <img src="/comics/233/233-somewhere-someone-2.webp" alt="" width="350" />
+        <img src="/comics/233/233-somewhere-someone-3.webp" alt="" width="350" />
       </div>
 
       <nav aria-label="Comic strip browsing">
@@ -150,13 +153,13 @@
           </svg>
           <span>First</span>
         </a>
-        <a href="/comics/231" rel="prev">
+        <a href="/comics/232" rel="prev">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M75,0 25,50 75,100" />
           </svg>
           <span>Previous</span>
         </a>
-        <a class="random-post" href="/comics/226">
+        <a class="random-post" href="/comics/231">
           <svg width="1em" height="1em" viewBox="0 0 100 100" class="random" aria-hidden="true">
             <path class="random" d="M100,25 80,2 80,48Z" />
             <path class="random" d="M100,75 80,98 80,52Z" />
@@ -164,7 +167,7 @@
           </svg>
           <span>Random</span>
         </a>
-        <a href="/comics/233" rel="next">
+        <a href="/comics/234" rel="next">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M25,0 75,50 25,100" />
           </svg>
@@ -178,9 +181,9 @@
         </a>
       </nav>
 
-      <p>Permalink: <a aria-label="permanent link" id="permanent-link" href="/comics/232">https://comicss.art/comics/232</a></p>
-      <p>Image link: <a aria-label="image version" id="image-link" href="/comics/232/wizard-of-ux.png">https://comicss.art/comics/232/wizard-of-ux.png</a></p>
-      <p>Source code: <a aria-label="html version" id="code-link" href="/comics/232/wizard-of-ux.html" rel="alternate">https://comicss.art/comics/232/wizard-of-ux.html</a></p>
+      <p>Permalink: <a aria-label="permanent link" id="permanent-link" href="/comics/233">https://comicss.art/comics/233</a></p>
+      <p>Image link: <a aria-label="image version" id="image-link" href="/comics/233/somewhere-someone.png">https://comicss.art/comics/233/somewhere-someone.png</a></p>
+      <p>Source code: <a aria-label="html version" id="code-link" href="/comics/233/somewhere-someone.html" rel="alternate">https://comicss.art/comics/233/somewhere-someone.html</a></p>
 
       <hr />
       <p>This work is licensed under a <a href="https://creativecommons.org/licenses/by-nc/4.0/" rel="license external noreferrer nofollow">Creative Commons Attribution-NonCommercial 4.0 License</a>.</p>
@@ -218,7 +221,7 @@
       </nav>
     </footer>
 
-    <script>let postId = 232;</script>
+    <script>let postId = 233;</script>
     <script src="/js/data.js?"></script>
     <script src="/js/code.js"></script>
   </body>
