--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         (without needing any JavaScript) in the <a href="/archive">Archive</a>.
       </noscript>
 
-      <h1>The Wizard of UX</h1>
+      <h1>Somewhere, Someone</h1>
 
       <nav aria-label="Comic strip browsing">
         <a href="/comics/1" rel="first">
@@ -112,13 +112,13 @@
           </svg>
           <span>First</span>
         </a>
-        <a href="/comics/231" rel="prev">
+        <a href="/comics/232" rel="prev">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M75,0 25,50 75,100" />
           </svg>
           <span>Previous</span>
         </a>
-        <a class="random-post" href="/comics/163">
+        <a class="random-post" href="/comics/39">
           <svg width="1em" height="1em" viewBox="0 0 100 100" class="random" aria-hidden="true">
             <path class="random" d="M100,25 80,2 80,48Z" />
             <path class="random" d="M100,75 80,98 80,52Z" />
@@ -140,8 +140,11 @@
         </a>
       </nav>
 
-      <div id="comic-strip" class="vertical" role="img" aria-label="Minimalistic cartoon with the main character from the Wonderful Wizard of Oz stating what they want from the wizard: a lion wants courage, a scarecrow wants a brain, a tin woodman wants a brain, and the girl Dorothy wants 'web developers who care about accessibility'">
-        <img src="/comics/232/232-wizard-of-ux-0.webp" alt="" width="350" />
+      <div id="comic-strip" class="" role="img" aria-label="comic strip with 4 panels in a 2x2 grid showing a character that says 'somewhere right now... someone online... is creating an amazing demo. [looking to the reader] ...And I can't wait to see it!'">
+        <img src="/comics/233/233-somewhere-someone-0.webp" alt="" width="350" />
+        <img src="/comics/233/233-somewhere-someone-1.webp" alt="" width="350" />
+        <img src="/comics/233/233-somewhere-someone-2.webp" alt="" width="350" />
+        <img src="/comics/233/233-somewhere-someone-3.webp" alt="" width="350" />
       </div>
 
       <nav aria-label="Comic strip browsing">
@@ -151,13 +154,13 @@
           </svg>
           <span>First</span>
         </a>
-        <a href="/comics/231" rel="prev">
+        <a href="/comics/232" rel="prev">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M75,0 25,50 75,100" />
           </svg>
           <span>Previous</span>
         </a>
-        <a class="random-post" href="/comics/226">
+        <a class="random-post" href="/comics/231">
           <svg width="1em" height="1em" viewBox="0 0 100 100" class="random" aria-hidden="true">
             <path class="random" d="M100,25 80,2 80,48Z" />
             <path class="random" d="M100,75 80,98 80,52Z" />
@@ -179,9 +182,9 @@
         </a>
       </nav>
 
-      <p>Permalink: <a aria-label="permalink" id="permanent-link" href="/comics/232">https://comicss.art/comics/232</a></p>
-      <p>Image link: <a aria-label="image link" id="image-link" href="/comics/232/wizard-of-ux.png">https://comicss.art/comics/232/wizard-of-ux.png</a></p>
-      <p>Source code: <a aria-label="html version" id="code-link" href="/comics/232/wizard-of-ux.html" rel="alternate">https://comicss.art/comics/232/wizard-of-ux.html</a></p>
+      <p>Permalink: <a aria-label="permalink" id="permanent-link" href="/comics/233">https://comicss.art/comics/233</a></p>
+      <p>Image link: <a aria-label="image link" id="image-link" href="/comics/233/somewhere-someone.png">https://comicss.art/comics/233/somewhere-someone.png</a></p>
+      <p>Source code: <a aria-label="html version" id="code-link" href="/comics/233/somewhere-someone.html" rel="alternate">https://comicss.art/comics/233/somewhere-someone.html</a></p>
 
       <hr />
       <p>This work is licensed under a <a href="https://creativecommons.org/licenses/by-nc/4.0/" rel="license external noreferrer nofollow">Creative Commons Attribution-NonCommercial 4.0 License</a>.</p>
@@ -220,7 +223,7 @@
     </footer>
 
     <script>let postId = 0;</script>
-    <script src="/js/data.js?last-updated=2026-01-19"></script>
+    <script src="/js/data.js?last-updated=2026-01-26"></script>
     <script src="/js/code.js"></script>
   </body>
 </html>
