new game: chain

--- a/games/index.html
+++ b/games/index.html
@@ -118,6 +118,14 @@
         <tbody>
           <tr>
             <td>
+              <a href="/games/7">Chain (January 28, 2026)</a>
+            </td>
+            <td>
+              <a href="/games/7/solution.html">Solution <span class="a11y-hidden">for Game 7</span></a>
+            </td>
+          </tr>
+          <tr>
+            <td>
               <a href="/games/6">Code Breaker (January 21, 2026)</a>
             </td>
             <td>
