--- a/games/7/solution.html
+++ b/games/7/solution.html
@@ -9,18 +9,18 @@
     <meta name="description" content="comiCSS Games: games about CSS. Coded in CSS (mostly)." />
     <meta name="theme-color" content="#993399" />
 
-    <title>comiCSS Game - Break the Code</title>
+    <title>comiCSS - Game 7 Solution</title>
 
-    <meta property="og:title" content="Break the Code - comiCSS" />
+    <meta property="og:title" content="Chain - comiCSS" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://comicss.art" />
-    <meta property="og:image" content="https://comicss.art/games/css/break-the-code.png" />
+    <meta property="og:image" content="https://comicss.art/images/thumb.jpg" />
     <meta property="og:description" content="comiCSS Games: games about CSS. Coded in CSS (mostly)." />
     <meta name="twitter:card" content="summary">
     <meta name="twitter:url" content="http://comicss.art/">
-    <meta name="twitter:title" content="Break the Code - comiCSS">
+    <meta name="twitter:title" content="Chain - comiCSS">
     <meta name="twitter:description" content="comiCSS Games: games about CSS. Coded in CSS (mostly).">
-    <meta name="twitter:image" content="https://comicss.art/games/css/break-the-code.png">
+    <meta name="twitter:image" content="https://comicss.art/images/thumb.jpg">
     <link rel="monetization" href="https://fynbos.me/alvaro">
 
     <link rel="shortcut icon" href="/favicon.png" />
@@ -28,8 +28,6 @@
 
     <link rel="stylesheet" href="/css/almond.lite.min.css" />
     <link rel="stylesheet" href="/css/styles.css" />
-    <link rel="stylesheet" href="../css/code-breaker.css" />
-    <script defer src="../css/code-breaker.js"></script>
   </head>
   <body class="game">
     <a href="#main" class="skip-link">Skip to main content</a>
@@ -99,102 +97,44 @@
     </header>
 
     <main id="main" class="game-main">
-      <h1>Code Breaker</h1>
-
-      <p>These three knobs control a safebox lock. Each knob corresponds to a CSS word. To unlock the safebox, turn the knobs so that the correct starting letter of each word is at the top.</p>
-      <ol>
-        <li>Determine how many positions each knob needs to be turned.</li>
-        <li>Specify the direction: C for clockwise or CC for counter-clockwise.</li>
-        <li>Enter the number of positions and the direction in the inputs below each knob.</li>
-        <li>Click "Check" to see if the safebox unlocks.</li>
+      <h1>Chain Solution</h1>
+      <p>This page contains the solution to the <a href="./">Chain game for January 28, 2026</a>.</p>
+      <p>
+        To avoid spoilers, all answers are hidden by default. You can use the toggle to reveal 
+        them whenever you're ready. Or mouse over each answer to see it temporarily.
+      </p>
+      <label for="show-answers" style="display:flex;align-items:center;gap:0.5rem;cursor:pointer;">
+        <input type="checkbox" id="show-answers" role="switch" />
+        <span>Show answers</span>
+      </label>
+      <style>
+        ol.answers li {
+          list-style: none;
+          display: grid;
+          grid-template-columns: 2.5em auto;
+          gap: 0.25em;
+        }
+        ol.answers li span {
+          filter: blur(0.25rem);
+          transition: filter 1s;
+        }
+        :has(#show-answers:checked) ol li span {
+          filter: blur(0);
+        }
+        ol.answers li:hover span {
+          filter: blur(0);
+        }
+      </style>
+      <ol class="answers">
+        <li>1-10: <span>CARET-SHAPE</span></li>
+        <li>1-3: <span>CLEAR</span></li>
+        <li>2-4: <span>AZURE</span></li>
+        <li>6-4: <span>SCALE (as ELACS)</span></li>
+        <li>7-5: <span>HYPOT (as TOPYH)</span></li>
+        <li>9-7: <span>PITCH (as HCTIP)</span></li>
+        <li>8-10: <span>ANGLE</span></li>
       </ol>
-      <p>Note: Each CSS word can be read either left-to-right or right-to-left (<b>whichever is the shortest distance</b>). Words may contain dashes but they are not displayed on the knob.</p>
-      <p>Example:</p>
-      <div class="knob" data-letter="1" data-num="6">
-        <span data-i="0">R</span>
-        <span data-i="1">O</span>
-        <span data-i="2">B</span>
-        <span data-i="3">R</span>
-        <span data-i="4">E</span>
-        <span data-i="5">D</span>
-      </div>
-      <p>The solution for this knob would be 2-CC because the knob would need to be turned two letters counter-clockwise to unlock (BORDER).</p>
-
-      <hr>
-    
-      <h2>The Game</h2>
-      <article class="maingame">
-        <section class="knobs">
-          <div class="container">
-            <div class="knob" data-letter="1" data-num="6">
-              <span data-i="0">R</span>
-              <span data-i="1">G</span>
-              <span data-i="2">I</span>
-              <span data-i="3">N</span>
-              <span data-i="4">M</span>
-              <span data-i="5">A</span>
-            </div>
-            <input placeholder="#" pattern="2" maxlength="1" required>
-            <input placeholder="C/CC" pattern="(c|C)" maxlength="2" required>
-          </div>
-          <div class="container">
-            <div class="knob" data-num="8">
-              <span data-i="0">V</span>
-              <span data-i="1">O</span>
-              <span data-i="2">W</span>
-              <span data-i="3">O</span>
-              <span data-i="4">L</span>
-              <span data-i="5">F</span>
-              <span data-i="6">R</span>
-              <span data-i="7">E</span>
-            </div>
-            <input placeholder="#" pattern="1" maxlength="1" required>
-            <input placeholder="C/CC" pattern="(c|C)(c|C)" maxlength="2" required>
-          </div>
-          <div class="container">
-            <div class="knob" data-letter="1" data-num="9">
-              <span data-i="0">R</span>
-              <span data-i="1">D</span>
-              <span data-i="2">B</span>
-              <span data-i="3">R</span>
-              <span data-i="4">E</span>
-              <span data-i="5">A</span>
-              <span data-i="6">K</span>
-              <span data-i="7">W</span>
-              <span data-i="8">O</span>
-            </div>
-            <input placeholder="#" pattern="2" maxlength="1" required>
-            <input placeholder="C/CC" pattern="(c|C)" maxlength="2" required>
-          </div>
-        </section>
-
-        <div class="button-group">
-          <button class="check">Check Puzzle</button>
-        </div>
-
-        <section class="scrim" id="scrim-good" aria-role="alert">
-          <div aria-live="assertive">
-            <h2>Congratulations!!</h2>
-            <p>You solved the puzzle!</p>
-          </div>
-        </section>
-
-        <section class="scrim" id="scrim-bad" aria-role="alert">
-          <div aria-live="assertive">
-            <h2>Oh-oh!!</h2>
-            <p>That's not the solution. Try again!</p>
-          </div>
-        </section>
-      </article>
     </main>
-
-    <section class="scrim">
-      <div aria-live="assertive">
-        <h2>Congratulations!!</h2>
-        <p>You solved the puzzle!</p>
-        <p>Go back to the <a href="/games">games page</a>.</p>
-      </div>
-    </section>
 
     <footer>
       Copyright &copy; 2021-2026. <a href="https://alvaromontoro.com" rel="author external">Alvaro Montoro</a>
