--- a/comics/234/index.html
+++ b/comics/234/index.html
@@ -9,23 +9,23 @@
     <meta name="description" content="comiCSS: A webcomic about CSS. Coded in CSS." />
     <meta name="theme-color" content="#993399" />
 
-    <title>comiCSS #233: Somewhere, Someone</title>
+    <title>comiCSS #234: Create Your Own Web Development Conspiracy</title>
 
-    <meta property="og:title" content="comiCSS #233: Somewhere, Someone" />
+    <meta property="og:title" content="comiCSS #234: Create Your Own Web Development Conspiracy" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://comicss.art/comics/233" />
-    <meta property="og:image" content="https://comicss.art/comics/233/thumb.png" />
-    <meta property="og:description" content="comic strip with 4 panels in a 2x2 grid showing a character that says 'somewhere right now... someone online... is creating an amazing demo. [looking to the reader] ...And I can't wait to see it!'" />
+    <meta property="og:url" content="https://comicss.art/comics/234" />
+    <meta property="og:image" content="https://comicss.art/comics/234/thumb.png" />
+    <meta property="og:description" content="Mad lib game to create your own web development theory. Pick your birthday month from the first column, your favorite color from the second column, and your first initial from the third column, then check what conspiracy theory you came up with. You will need to visit the demo page to review all the options." />
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:url" content="https://comicss.art/comics/233">
-    <meta name="twitter:title" content="comiCSS #233: Somewhere, Someone">
-    <meta name="twitter:description" content="comic strip with 4 panels in a 2x2 grid showing a character that says 'somewhere right now... someone online... is creating an amazing demo. [looking to the reader] ...And I can't wait to see it!'">
-    <meta name="twitter:image" content="https://comicss.art/comics/233/thumb.png">
+    <meta name="twitter:url" content="https://comicss.art/comics/234">
+    <meta name="twitter:title" content="comiCSS #234: Create Your Own Web Development Conspiracy">
+    <meta name="twitter:description" content="Mad lib game to create your own web development theory. Pick your birthday month from the first column, your favorite color from the second column, and your first initial from the third column, then check what conspiracy theory you came up with. You will need to visit the demo page to review all the options.">
+    <meta name="twitter:image" content="https://comicss.art/comics/234/thumb.png">
     <link rel="monetization" href="https://fynbos.me/alvaro">
 
     <link rel="shortcut icon" href="/favicon.png" />
 
-    <link rel="canonical" href="https://comicss.art/comics/233" />
+    <link rel="canonical" href="https://comicss.art/comics/234" />
 
     <link rel="stylesheet" href="/css/almond.lite.min.css" />
     <link rel="stylesheet" href="/css/styles.css" />
@@ -96,13 +96,13 @@
         </ul>
       </nav>
     </header>
-    <main id="main">
+    <main id="main" class="latest">
       <noscript>
         This website needs JavaScript to navigate. But, you can see all the drawings linked at once 
         (without needing any JavaScript) in the <a href="/archive">Archive</a>.
       </noscript>
 
-      <h1>Somewhere, Someone</h1>
+      <h1>Create Your Own Web Development Conspiracy</h1>
 
       <nav aria-label="Comic strip browsing">
         <a href="/comics/1" rel="first">
@@ -111,13 +111,13 @@
           </svg>
           <span>First</span>
         </a>
-        <a href="/comics/232" rel="prev">
+        <a href="/comics/233" rel="prev">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M75,0 25,50 75,100" />
           </svg>
           <span>Previous</span>
         </a>
-        <a class="random-post" href="/comics/39">
+        <a class="random-post" href="/comics/211">
           <svg width="1em" height="1em" viewBox="0 0 100 100" class="random" aria-hidden="true">
             <path class="random" d="M100,25 80,2 80,48Z" />
             <path class="random" d="M100,75 80,98 80,52Z" />
@@ -125,7 +125,7 @@
           </svg>
           <span>Random</span>
         </a>
-        <a href="/comics/234" rel="next">
+        <a href="/comics/235" rel="next">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M25,0 75,50 25,100" />
           </svg>
@@ -139,11 +139,8 @@
         </a>
       </nav>
 
-      <div id="comic-strip" role="img" class="" aria-label="comic strip with 4 panels in a 2x2 grid showing a character that says 'somewhere right now... someone online... is creating an amazing demo. [looking to the reader] ...And I can't wait to see it!'">
-        <img src="/comics/233/233-somewhere-someone-0.webp" alt="" width="350" />
-        <img src="/comics/233/233-somewhere-someone-1.webp" alt="" width="350" />
-        <img src="/comics/233/233-somewhere-someone-2.webp" alt="" width="350" />
-        <img src="/comics/233/233-somewhere-someone-3.webp" alt="" width="350" />
+      <div id="comic-strip" role="img" class="vertical" aria-label="Mad lib game to create your own web development theory. Pick your birthday month from the first column, your favorite color from the second column, and your first initial from the third column, then check what conspiracy theory you came up with. You will need to visit the demo page to review all the options.">
+        <img src="/comics/234/234-webdev-conspiracy-0.webp" alt="" width="350" />
       </div>
 
       <nav aria-label="Comic strip browsing">
@@ -153,7 +150,7 @@
           </svg>
           <span>First</span>
         </a>
-        <a href="/comics/232" rel="prev">
+        <a href="/comics/233" rel="prev">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M75,0 25,50 75,100" />
           </svg>
@@ -167,7 +164,7 @@
           </svg>
           <span>Random</span>
         </a>
-        <a href="/comics/234" rel="next">
+        <a href="/comics/235" rel="next">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M25,0 75,50 25,100" />
           </svg>
@@ -181,9 +178,9 @@
         </a>
       </nav>
 
-      <p>Permalink: <a aria-label="permanent link" id="permanent-link" href="/comics/233">https://comicss.art/comics/233</a></p>
-      <p>Image link: <a aria-label="image version" id="image-link" href="/comics/233/somewhere-someone.png">https://comicss.art/comics/233/somewhere-someone.png</a></p>
-      <p>Source code: <a aria-label="html version" id="code-link" href="/comics/233/somewhere-someone.html" rel="alternate">https://comicss.art/comics/233/somewhere-someone.html</a></p>
+      <p>Permalink: <a aria-label="permanent link" id="permanent-link" href="/comics/234">https://comicss.art/comics/234</a></p>
+      <p>Image link: <a aria-label="image version" id="image-link" href="/comics/234/webdev-conspiracy.png">https://comicss.art/comics/234/webdev-conspiracy.png</a></p>
+      <p>Source code: <a aria-label="html version" id="code-link" href="/comics/234/webdev-conspiracy.html" rel="alternate">https://comicss.art/comics/234/webdev-conspiracy.html</a></p>
 
       <hr />
       <p>This work is licensed under a <a href="https://creativecommons.org/licenses/by-nc/4.0/" rel="license external noreferrer nofollow">Creative Commons Attribution-NonCommercial 4.0 License</a>.</p>
@@ -221,7 +218,7 @@
       </nav>
     </footer>
 
-    <script>let postId = 233;</script>
+    <script>let postId = 234;</script>
     <script src="/js/data.js?"></script>
     <script src="/js/code.js"></script>
   </body>
