--- a/comics/234/webdev-conspiracy.html
+++ b/comics/234/webdev-conspiracy.html
@@ -25,17 +25,127 @@
     <link rel="shortcut icon" href="/favicon.png" />
 
     <style>
-      @font-face {
-        font-family: 'Patrick Hand SC';
-        src: url(/fonts/PatrickHandSC.ttf);
-        unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
-      }
+@font-face {
+  font-family: 'Patrick Hand';
+  src: url(/fonts/PatrickHand-Regular.ttf);
+}
 
-      
+@font-face {
+  font-family: 'Edu Sa Hand';
+  src: url(/fonts/EduSAHand.ttf);
+}
+
+body {
+  font-family: 'Edu Sa Hand', 'Patrick Hand', 'Amatic SC', Helvetica, sans-serif;
+  font-size: 1vmin;
+}
+
+table {
+  width: 115em;
+  border: 1px solid;
+}
+
+caption {
+  font-weight: 900;
+  font-size: 5em;
+  text-wrap: balance;
+  line-height: 1.25;
+  margin-bottom: 0.5em;
+}
+
+th {
+  border: 1px solid #000;
+  padding: 0.5em;
+  font-weight: 900;
+  font-size: 3.5em;
+}
+
+b {
+  font-weight: 700;
+}
+
+td {
+  border: 1px solid #000;
+  padding: 0.5em;
+  font-size: 2.75em;
+  width: 33.33%;
+  vertical-align: top;
+}
     </style>
   </head>
   <body>
-
-    <a href="/" style="position: fixed; bottom: 1rem; right: 1rem;" rel="up">See more comics</a>
+<table cellspacing="0" bordercollapse="collapse">
+  <caption>Create Your Own<br>Web Development Conspiracy</caption>
+  <thead>
+    <tr>
+      <th>Your Birth Month</th>
+      <th>Favorite Color</th>
+      <th>First Initial</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td><b>January &ndash;</b> HTML</td>
+      <td><b>Red &ndash;</b>  is being rewritten in a basement by</td>
+      <td><b>A, B &ndash;</b> three raccoons in a trenchcoat.</td>
+    </tr>
+    <tr>
+      <td><b>February &ndash;</b> CSS</td>
+      <td><b>Orange &ndash;</b> was invented to distract us from</td>
+      <td><b>C, D &ndash;</b> a time traveler stuck in Internet Explorer 6.</td>
+    </tr>
+    <tr>
+      <td><b>March &ndash;</b> JavaScript</td>
+      <td><b>Yellow &ndash;</b> is part of a covert project led by</td>
+      <td><b>E, F &ndash;</b> the necromancer of Netscape Navigator.</td>
+    </tr>
+    <tr>
+      <td><b>April &ndash;</b> ReactJS</td>
+      <td><b>Green &ndash;</b> exists to hide the truth about</td>
+      <td><b>G, H &ndash;</b> the "new IE."</td>
+    </tr>
+    <tr>
+      <td><b>May &ndash;</b> Vercel</td>
+      <td><b>Blue &ndash;</b> is just a front for</td>
+      <td><b>I, J &ndash;</b> the CSS Working Group's secret branch.</td>
+    </tr>
+    <tr>
+      <td><b>June &ndash;</b> TailwindCSS</td>
+      <td><b>Indigo &ndash;</b> was a failed experiment by</td>
+      <td><b>K, L &ndash;</b> jQuery.</td>
+    </tr>
+    <tr>
+      <td><b>July &ndash;</b> WordPress</td>
+      <td><b>Violet &ndash;</b> secretly dreams of being</td>
+      <td><b>M, N &ndash;</b> that voice that tells you to use !important.</td>
+    </tr>
+    <tr>
+      <td><b>August &ndash;</b> Chrome</td>
+      <td><b>White &ndash;</b> whispers bad advice inspired by</td>
+      <td><b>O, P &ndash;</b> the ghosts of deprecated HTML tags.</td>
+    </tr>
+    <tr>
+      <td><b>September &ndash;</b> Safari</td>
+      <td><b>Gray &ndash;</b> is secretly under the control of</td>
+      <td><b>Q, R &ndash;</b> a secret group of Stack Overflow moderators.</td>
+    </tr>
+    <tr>
+      <td><b>October &ndash;</b> Firefox</td>
+      <td><b>Black &ndash;</b> is slowly being replaced by</td>
+      <td><b>S, T &ndash;</b> a dev who claims "it's working on my machine!"</td>
+    </tr>
+    <tr>
+      <td><b>November &ndash;</b> The W3C</td>
+      <td><b>Brown &ndash;</b> is running outdated dependencies from</td>
+      <td><b>U, V, W &ndash;</b> an AI trained in W3Schools articles.</td>
+    </tr>
+    <tr>
+      <td><b>December &ndash;</b> The Internet</td>
+      <td><b>Pink &ndash;</b> is propaganda created by</td>
+      <td><b>X, Y, Z &ndash;</b> a sentient &lt;marquee&gt; tag.</td>
+    </tr>
+  </tbody>
+</table>
+    <a href="/" style="position: fixed; bottom: 1rem; right: 1rem; font-size: 16px;" rel="up">See more comics</a>
   </body>
   </html>
