--- a/games/6/solution.html
+++ b/games/6/solution.html
@@ -122,7 +122,10 @@
       <ol>
         <li><span>2C (margin)</span></li>
         <li><span>1CC (overflow)</span></li>
-        <li><span>2C (word-break)</span></li>
+        <li>
+          <span>1C (word-break)</span><br>
+          <span>It could also be 3CC (break-word), but the distance is higher so the solution is 1C.</span>
+        </li>
       </ol>
     </main>
 
